# IDE_Memory

./: .gitignore  CREAR_RELEASE.md  Cargo.toml  GUIA_GITHUB.md  IDE_Memory_Stats.bat  IDE_Memory_Stats_Launcher.bat  LICENSE  LIMPIAR_ARCHIVOS_VIEJOS.md  README.md  RESUMEN.md  RESUMEN_CONVERSACION_GITHUB.md  SOLUCION_ERRORES_CURSOR.md  VERIFICACION_CONFIG.md  VINCULAR_GITHUB_CURSOR.md
docs/: CONFIGURAR_GIT_CURSOR.md  CURSOR_CONFIG.md  METRICAS.md  README.md  RESUMEN_CONVERSACION_MCP.md  RESUMEN_METRICAS.md
src/: main.rs  mcp_server.rs  memory.rs  metrics.rs  stats.rs
