[package]
name = "ide-memory-mcp-server"
version = "0.1.0"
edition = "2021"
description = "MCP Server para memoria persistente en IDEs (Cursor, Claude Code, etc.)"
authors = ["Mostremos <marcelo_pcsolution@live.com>"]
license = "MIT"
repository = "https://github.com/Mostremos/IDE_Memory"
keywords = ["mcp", "memory", "persistent", "ide", "cursor", "context"]
categories = ["development-tools"]

[[bin]]
name = "IDE_Memory"
path = "src/main.rs"

[[bin]]
name = "IDE_Memory_Stats"
path = "src/stats.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.30", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }